# kafka-lab

./: Dockerfile  README.md  consumer.py  docker-compose.yml  producer.py  pyproject.toml
