[tool.poetry]
name = "kafka-lab"
version = "0.1.0"
description = ""
authors = ["Renan Santana <renan.santana@instruct.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
confluent-kafka = "^2.0.2"
psutil = "^5.9.4"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
